refactor(dungeon): move boundary stretch planning into core